--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div id="brand">
-                <h1>Taskify!</h1>
+                <a href="{{url_for('logout')}}"><h1>Taskify!</h1></a>
             </div>
             <nav>
                 <ul>
@@ -36,7 +36,7 @@
     </header>
     <main>
         <div class="task-container">
-            <h1>Hello {{ first_name }}!</h1>
+            <h1>Hello, {{ first_name }}</h1>
             <div id="main-container">
                 <div id="calendar_sec">
                     <div id="calendar"></div>
