--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -19,13 +19,13 @@
             <nav>
                 <ul>
                     <li id="Dashboard" class="current">
-                        <a href="{{ url_for('nextpage') }}">My Tasks</a>
+                        <a href="{{ url_for('activePages.nextpage') }}">My Tasks</a>
                     </li>
                     <li id="Completed_Tasks">
-                        <a href="{{ url_for('completed_tasks') }}">Completed</a>
+                        <a href="{{ url_for('activePages.completed_tasks') }}">Completed</a>
                     </li>
                     <li id="Add_Tasks">
-                        <a href="{{ url_for('task') }}">Add Tasks</a>
+                        <a href="{{ url_for('activePages.task') }}">Add Tasks</a>
                     </li>
                     <li id="Logout">
                         <a href="{{ url_for('logout') }}">Logout</a>
@@ -83,7 +83,7 @@
             </div>
         </div>
     </main>
-    <a href="{{ url_for('discussion_board') }}" id="fixed-round-button">
+    <a href="{{ url_for('activePages.discussion_board') }}" id="fixed-round-button">
         <img src="{{ url_for('static', filename='images/chat.png') }}" alt="Button Image">
     </a>
     <script>
