--- a/Flask/Templates/login.html
+++ b/Flask/Templates/login.html
@@ -22,18 +22,18 @@
         <header>
             <div class="container">
                 <div id="brand">
-                    <a href="{{url_for('home')}}"><h1>Taskify!</h1></a>
+                    <a href="{{url_for('frontPages.home')}}"><h1>Taskify!</h1></a>
                 </div>
                 <nav>
                     <ul>
                         <li id="Home">
-                            <a href="{{ url_for('home') }}">Home</a>
+                            <a href="{{ url_for('frontPages.home') }}">Home</a>
                         </li>
                         <li id="Login" class="current">
-                            <a href="{{ url_for('login') }}">Login</a>
+                            <a href="{{ url_for('frontPages.login') }}">Login</a>
                         </li>
                         <li id="Register">
-                            <a href="{{ url_for('register') }}">Register</a>
+                            <a href="{{ url_for('frontPages.register') }}">Register</a>
                         </li>
                     </ul>
                 </nav>
