--- a/Flask/Templates/newPost.html
+++ b/Flask/Templates/newPost.html
@@ -15,8 +15,8 @@
         <textarea name="body" placeholder="Write your post here..." required></textarea><br>
         <button class=sub-button type="submit">Submit</button>
     </form>
-    <button onclick="window.location.href='{{ url_for('discussion_board') }}';">Back to Discussion Board</button>
-    <a href="{{ url_for('nextpage') }}" id="fixed-round-button">
+    <button onclick="window.location.href='{{ url_for('activePages.discussion_board') }}';">Back to Discussion Board</button>
+    <a href="{{ url_for('activePages.nextpage') }}" id="fixed-round-button">
         <img src="{{ url_for('static', filename='images/to-do.png') }}" alt="Button Image">
     </a>
 </body>
